tests/error/for-without-do.lua
for i = 1, 5
  print("A number: " .. i)
end